// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a card with a footer 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

abbr.c5 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c5 {
  font-style: italic;
}

kbd.c5 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c5 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c5 {
  font-weight: bold;
}

sub.c5,
sup.c5 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c5,
u.c5 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c5,
cite.c5,
var.c5,
em.c5 {
  font-style: italic;
}

kbd.c5,
pre.c5,
samp.c5 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c5 .c7 {
  top: 0.15em;
}

.c0 {
  padding: 1.5rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 1rem;
  width: 100%;
}

.c4 {
  font-weight: 600;
  font-size: 1.25rem;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c2"
  >
    <span
      class="c4 c5 c2"
    >
      This is a title
    </span>
  </div>
  <div
    class="c2"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
  <div
    class="c6 c2"
  >
    test
  </div>
</div>
`;

exports[`renders correctly for a compounded card with a actions 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

abbr.c5 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c5 {
  font-style: italic;
}

kbd.c5 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c5 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c5 {
  font-weight: bold;
}

sub.c5,
sup.c5 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c5,
u.c5 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c5,
cite.c5,
var.c5,
em.c5 {
  font-style: italic;
}

kbd.c5,
pre.c5,
samp.c5 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c5 .c6 {
  top: 0.15em;
}

.c0 {
  padding: 1.5rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c4 {
  font-weight: 600;
  font-size: 1.25rem;
}

<div
  aria-describedby="Card2"
  aria-labelledby="Card1"
  class="c0 c1 c2"
>
  <div
    class="c3 c2"
  >
    <span
      class="c4 c5 c2"
      id="Card1"
    >
      This is a title
    </span>
    <div>
      <div>
        test
      </div>
    </div>
  </div>
  <div
    class="c2"
    id="Card2"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
</div>
`;

exports[`renders correctly for a default card 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

abbr.c5 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c5 {
  font-style: italic;
}

kbd.c5 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c5 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c5 {
  font-weight: bold;
}

sub.c5,
sup.c5 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c5,
u.c5 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c5,
cite.c5,
var.c5,
em.c5 {
  font-style: italic;
}

kbd.c5,
pre.c5,
samp.c5 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c5 .c6 {
  top: 0.15em;
}

.c0 {
  padding: 1.5rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c4 {
  font-weight: 600;
  font-size: 1.25rem;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c2"
  >
    <span
      class="c4 c5 c2"
    >
      This is a title
    </span>
  </div>
  <div
    class="c2"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
</div>
`;
